# linaro-cdmi

./: Makefile  Makefile.am  README.md  README.playready  cdmi.h  config_playready.mk  configure.ac  service.cpp
cdmi/: Makefile.am  Makefile.playready  service.cpp  shmemsem_helper.cpp  socket_server_helper.cpp
cdmi-stub/: Makefile.am  aes_decryptor.h  imp.h  mediaenginesession.cpp  mediakeys.cpp  mediakeysession.cpp  protected_buffer.h  protected_memory_manager.h  transparent_buffer.h  unprotected_buffer.cpp  unprotected_buffer.h
include/: cdmi-defs.h  cdmi-log.h  cdmi.h
include/socket/: socket_server_helper.h
rpc/: Makefile.am  opencdm_callback_clnt.c  opencdm_xdr.h  opencdm_xdr.x  opencdm_xdr_clnt.c  opencdm_xdr_svc.c  opencdm_xdr_xdr.c
